--- a/src/home.html
+++ b/src/home.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-  <p>thi is the first page!</p>
+  <p>{{loginStatus}}</p>
+  <p><a href="sign_in.html">登录</a></p>
 </body>
 </html>
