--- a/src/sign_up.html
+++ b/src/sign_up.html
@@ -5,12 +5,12 @@
   <title>Title</title>
 </head>
 <body>
-<p>新用户注册界面</p>
-<form action="" id="register">
-  <label>User name：<input type="text" name="name"></label><br>
-  <label>User _pwd：<input type="password" name="password"></label><br>
-  <input type="submit">
-</form>
+  <p>新用户注册界面</p>
+  <form action="" id="register">
+    <label>User name：<input type="text" name="name"></label><br>
+    <label>User _pwd：<input type="password" name="password"></label><br>
+    <button type="submit">注册</button>
+  </form>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script>
@@ -24,7 +24,7 @@
       url: '/register',
       contentType: 'text/json;charset=UTF-8',
       data: JSON.stringify({name, password})   //name:name,password:password
-    }).then(()=>{
+    }).then(() => {
       alert('注册成功');
       location.href = '/sign_in.html';
     },()=>{})
